--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package
       does as one or more full sentences.
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.7), RcppArmadillo
-LinkingTo: Rcpp, RcppArmadillo
-Depends: RcppArmadillo
+Imports: Rcpp (>= 0.12.7), RcppArmadillo, RcppEigen
+LinkingTo: Rcpp, RcppArmadillo, RcppEigen
+Depends: RcppArmadillo, RcppEigen
