--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,15 @@ Date: 2016-11-24
 Author: Your Name
 Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package
-      does as one or more full sentences.
+    does as one or more full sentences.
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.7), RcppArmadillo, RcppEigen
+Imports:
+    Rcpp (>= 0.12.7),
+    RcppArmadillo,
+    RcppEigen
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
-Depends: RcppArmadillo, RcppEigen
+Depends:
+    RcppArmadillo,
+    RcppEigen
 LazyData: true
+RoxygenNote: 5.0.1
